--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.profiles.active=test
 
-default.sender=angelikatf@gmail.com
-default.recipient=angelikatf@gmail.com
+default.sender=
+default.recipient=
 
 jwt.secret=SequenciaDeCaracteresParaAssinarToken
 jwt.expiration=60000
