Endpoints para buscar estados e cidades

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,8 +6,8 @@ default.recipient=
 jwt.secret=SequenciaDeCaracteresParaAssinarToken
 jwt.expiration=86400000
 
-aws.access_key_id=
-aws.secret_access_key=
+aws.access_key_id=AKIA5GEZRPLAK36ATMO5
+aws.secret_access_key=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
 s3.bucket=curso-spring-ionic-atf
 s3.region=sa-east-1
 
